# tune-shifter

./: BACKLOG.md  CHANGELOG.md  README.md  TEST_PLAN_0.17.0.md  USAGE.md  claude.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: tune-shifter.rb
completions/: _tune-shifter
launcher/: main.c
tests/: test_artwork.py  test_config.py  test_config_monitor.py  test_daemon_core.py  test_extractor.py  test_main.py  test_mover.py  test_pipeline.py  test_syncer.py  test_tagger.py  test_watcher.py
tune_shifter/: __main__.py  artwork.py  bandcamp.py  config.py  config_monitor.py  daemon_core.py  extractor.py  menu_bar.py  mover.py  pipeline.py  syncer.py  tagger.py  watcher.py
