[tool.poetry]
name = "tune-shifter"
version = "0.7.0"
description = "Automated audio library ingest from Bandcamp downloads."
authors = []
packages = [{include = "tune_shifter"}]

[tool.poetry.dependencies]
python = ">=3.11"
watchdog = ">=4.0"
musicbrainzngs = ">=0.7"
mutagen = ">=1.47"
requests = ">=2.31"
Pillow = ">=10.0"
playwright = ">=1.44"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-mock = ">=3.12"
pytest-cov = ">=5.0"
mypy = ">=1.9"
black = ">=24.0"
types-requests = ">=2.31"
types-Pillow = ">=10.0"

[tool.poetry.scripts]
tune-shifter = "tune_shifter.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=tune_shifter --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["tune_shifter"]
omit = [
    "tune_shifter/__main__.py",
    "tune_shifter/bandcamp.py",
]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
# musicbrainzngs ships no type stubs
module = ["musicbrainzngs", "musicbrainzngs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tune_shifter.__main__"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# mutagen has partial stubs that don't cover ID3 frame classes or MP4 methods;
# silence the resulting errors in modules that rely on it heavily.
module = ["tune_shifter.tagger", "tune_shifter.mover", "tune_shifter.artwork"]
disable_error_code = ["no-untyped-call", "attr-defined", "unused-ignore"]

[[tool.mypy.overrides]]
# playwright ships no type stubs
module = [
    "playwright",
    "playwright.*",
    "tune_shifter.bandcamp",
    "tune_shifter.syncer",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped", "no-untyped-call", "attr-defined",
    "unused-ignore", "var-annotated", "type-arg", "no-any-return",
]
