[tool.poetry]
name = "tune-shifter"
version = "0.16.0"
description = "Automated audio library ingest from Bandcamp downloads."
authors = []
packages = [{include = "tune_shifter"}]
# USAGE.md is read by the Homebrew formula's caveats block; completions/ is
# installed by the Homebrew formula's zsh_completion.install call; launcher/main.c
# is compiled by the formula into the native binary. MANIFEST.in is ignored by
# poetry-core so all three must be declared here explicitly.
include = ["USAGE.md", "completions/_tune-shifter", "launcher/main.c"]

[tool.poetry.dependencies]
python = ">=3.11"
watchdog = ">=4.0"
musicbrainzngs = ">=0.7"
mutagen = ">=1.47"
requests = ">=2.31"
Pillow = ">=10.0"
playwright = ">=1.44"
rumps = {version = ">=0.4", markers = "sys_platform == 'darwin'"}
setproctitle = ">=1.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-mock = ">=3.12"
pytest-cov = ">=5.0"
mypy = ">=1.9"
black = ">=24.0"
types-requests = ">=2.31"
types-Pillow = ">=10.0"

[tool.poetry.scripts]
tune-shifter = "tune_shifter.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=tune_shifter --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["tune_shifter"]
omit = [
    "tune_shifter/__main__.py",
    "tune_shifter/bandcamp.py",
    "tune_shifter/menu_bar.py",
]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
# musicbrainzngs ships no type stubs
module = ["musicbrainzngs", "musicbrainzngs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tune_shifter.__main__"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# mutagen has partial stubs that don't cover ID3 frame classes, MP4 methods, or
# FLAC tag access (audio.tags is typed as VCFLACDict | MetadataBlock; the union
# causes false union-attr/index errors on the VCFLACDict branch we always use).
module = ["tune_shifter.tagger", "tune_shifter.mover", "tune_shifter.artwork"]
disable_error_code = ["no-untyped-call", "attr-defined", "unused-ignore", "union-attr", "index"]

[[tool.mypy.overrides]]
# rumps, AppKit, and objc (PyObjC runtime) ship no type stubs
module = ["rumps", "rumps.*", "AppKit", "AppKit.*", "objc", "objc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# menu_bar subclasses rumps.App (typed Any), uses @rumps.timer (untyped decorator),
# and imports objc/AppKit inline inside methods for lazy PyObjC access
module = ["tune_shifter.menu_bar"]
ignore_missing_imports = true
disable_error_code = ["misc", "untyped-decorator", "import-untyped"]

[[tool.mypy.overrides]]
# playwright ships no type stubs
module = [
    "playwright",
    "playwright.*",
    "tune_shifter.bandcamp",
    "tune_shifter.syncer",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped", "no-untyped-call", "attr-defined",
    "unused-ignore", "var-annotated", "type-arg", "no-any-return",
]
